# tenancyhelp

./: .gitignore  docker-compose.yaml  log.md  log.txt  tenancyhelp-requirements.excalidraw
tenancy_app/: .env.docker.example  .env.local.example  .env.prod.example  .eslintrc.json  Dockerfile  fly.toml  next.config.js  package.json  tailwind.config.ts  (+1 more)
tenancy_docs/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  makefile  pyproject.toml
tenancy_docs/api/: .env.example  app.py
tenancy_docs/index_docs/: .env.example  Dockerfile  chroma_embedding.py  fly.toml  get_transformations.py  index_docs.py  utils.py
tenancy_docs/index_docs/chroma_db/37b4f792-a1a6-402d-866c-3943b6c19e70/: index_metadata.pickle
tenancy_docs/index_docs/chroma_db/9ab580d2-f092-401c-89ab-ef0131ac7152/: index_metadata.pickle
tenancy_docs/index_docs/chroma_db/ec732715-33f7-4589-8bde-893b553e01a1/: index_metadata.pickle
tenancy_docs/load_docs/: document_metadata.db  init_database.py  init_storage.py  utils.py
tenancy_docs/load_docs/residential_tenancies_act/: constants.py  load_residential_tenancies_act.py  save_metadata.py
tenancy_docs/load_docs/tenancy_services_pdfs/: cookies.json  document_metadata.db  get_links.py  links.csv  links.html  load_docs.py  load_tenancy_services_pdfs.py  readme.md  requirements.txt  save_doc_metadata.py  save_docs.py  set_doc_metadata.py  utils.py
tenancy_docs/load_docs/tribunal_cases/: load_tribunal_cases.py  save_case_metadata.py  save_cases.py  save_doc_metadata.py
tenancy_docs/query_docs/: node_post_processor.py  query_docs.py  test.json
(+75 files in other folders)
