[tool.poetry]
name = "tenancy-docs"
version = "0.1.0"
description = ""
authors = ["testa113 <testa113>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "^0.4.21"
sentence-transformers = "^2.2.2"
pydantic = "^2.5.3"
llama-index = "^0.9.21"
pypdf = "^3.17.4"
selenium = "^4.16.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
python = "^3.11"
mypy = "^1.2"
ruff = "^0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
