[tool.poetry]
name = "tenancy-docs"
version = "0.1.0"
description = ""
authors = ["testa113 <testa113>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "^0.4.21"
sentence-transformers = "^2.2.2"
pydantic = "^2.5.3"
selenium = "^4.16.0"
beautifulsoup4 = "^4.12.2"
dict_hash = "^1.1.36"
llama-index-llms-anthropic = "^0.1.5"
llama-index = "^0.10.19"
pypdf = "^4.1.0"
llama-index-vector-stores-chroma = "^0.1.6"
llama-index-llms-huggingface = "^0.1.4"
llama-index-embeddings-huggingface = "^0.1.4"

[tool.poetry.group.dev.dependencies]
python = "^3.11"
mypy = "^1.2"
ruff = "^0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
